--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imagemetadata",
-  "version": "0.0.1",
-  "description": "Capacitor plugin to get image metadata, specifically creation date from images stored on phone.",
+  "version": "1.0.0",
+  "description": "A custom Capacitor plugin to get image metadata",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -27,7 +27,9 @@
   "keywords": [
     "capacitor",
     "plugin",
-    "native"
+    "native",
+    "image",
+    "metadata"
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
